CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)
PROJECT (BackgroundAnalysis)

SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

SET(SRC_FILES 
    ${SRC_DIR}/hit.cpp
    ${SRC_DIR}/functions.cpp
    ${SRC_DIR}/main.cpp
    )

LIST(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})

FIND_PACKAGE(ROOT REQUIRED COMPONENTS RIO Net)

INCLUDE(${ROOT_USE_FILE})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_LIBRARY(bkg SHARED ${SRC_FILES})
TARGET_LINK_LIBRARIES(bkg ${ROOT_LIBRARIES})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} bkg)
